# mciwing.github.io

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CNAME  CONTRIBUTING.md  Dockerfile  README.md  dev.py  docker-compose.yaml  index.html  mkdocs.yml  pyproject.toml  serve-local.bat  sitemap.xml  tags.json
.github/workflows/: build.yml  ci.yml
assets/micropython/: upymqtt.py
assets/statistics/: bi_heatmap.html  bi_scatter.html  prob_clt_agemeandist.html  prob_clt_agemeandist_large.html  prob_cumulativeAverage.html  prob_diesample.html  prob_diffSampMean.html  prob_distSampMean.html  prob_hypo_t_p_ex.html  prob_hypo_t_tutor.html  prob_hypo_tdist.html  prob_lawoflarge1.html  prob_pvalue_highp.html  prob_pvalue_twot.html  prob_sampMeans.html  prob_sample3.html  prob_sample4.html  prob_samplevar.html  probability_cdf.html  probability_propprob.html  random_coin1.html  random_coin_5.html  random_coin_5000.html  random_coin_50000.html  random_dice_unfair.html  regression_roaming.html  regression_scatter_scale2.html  regression_scatter_scale_fit1.html  regression_scatter_unscale1.html  regression_scatter_unscale2.html  uni_box_ohne_out.html  uni_misleading1.html  uni_misleading2.html  uni_numeric_histo_large_binned.html  uni_numeric_histo_small.html  uni_ordinal_histo_sort_abs_cum.html  uni_ordinal_histo_sort_rel_cum.html  uni_ordinal_histo_unsort.html
blog/: index.html
data-science/: index.html
data-science/algorithms/: index.html
data-science/practice/: index.html
databasics/Data/: index.html
databasics/DataBasics/: index.html
databasics/Terms/: index.html
docs/: index.md
docs/assets/: colors.yaml
docs/blog/: .authors.yml  index.md
docs/data-science/: index.md
docs/databasics/: Data.md  DataBasics.md  Terms.md
docs/micropython/: actuator.md  index.md  lora.md  mqtt.md  sensors.md  setup.md  system.md
docs/programming/: ide.md  index.md  plotting.md
docs/python-extensive/: DataBasics.md  comparisons_and_logic.md  functions.md  git.md  gui.md  index.md  installation.md  oop.md  packages.md  pandas.md  (+6 more)
micropython/: index.html
overrides/: home.html  main.html
python/: index.html
python-extensive/: index.html
search/: search_index.json
statistics/: index.html
yolo/: index.html
(+271 files in other folders)
