[project]
name = "code-campus"
version = "0.3.0"
description = "Hands-on Python Courses for everyone!"
readme = "README.md"
authors = [
    {name = "Jakob Klotz", email = "jakob.klotz@mci.edu"},
    {name = "manuf3006", email = "manuel.ferdik@mci.edu"},
    {name = "verenitas", email = "verena.schallhart@mci.edu"},
    {name = "christinastampfer", email = "christina.stampfer@mci.edu"},
]
license = {text = "CC BY-NC-SA 4.0", file = "LICENSE"}
requires-python = ">=3.11,<3.14"
dependencies = [
    "mkdocs-material>=9.7.1",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-quiz>=1.3.0",
    "mkdocs-include-markdown-plugin>=7.2.0",
    "mkdocs-git-authors-plugin>=0.10.0",
]

